--- a/contact.html
+++ b/contact.html
@@ -5,21 +5,21 @@
 <!-- Mirrored from az-cambridge.webflow.io/contact by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Dec 2024 09:06:35 GMT -->
 <head>
   <!-- Primary Meta Tags -->
-<title>  Scitor Academy</title>
-<meta name="title" content="Best Digital Marketing Institute | Scitor Academy" />
-<meta name="description" content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+<title>Spanish Language Course in Saudi Arabia | Spanish Learning</title>
+<meta name="title" content="Spanish Language Course in Saudi Arabia | Spanish Learning" />
+<meta name="description" content="Scitor Academy provides the best Spanish language training in Saudi Arabia. Speak confidently with native expert guidance. Learn online at Scitor Academy, Join!"/>
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
  
-<meta property="og:title" content="Best Digital Marketing Institute | Scitor Academy" />
-<meta property="og:description" content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+<meta property="og:title" content="Spanish Language Course in Saudi Arabia | Spanish Learning" />
+<meta property="og:description" content="Scitor Academy provides the best Spanish language training in Saudi Arabia. Speak confidently with native expert guidance. Learn online at Scitor Academy, Join!" />
  
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:title" content="Best Digital Marketing Institute | Scitor Academy" />
-<meta property="twitter:description" content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+<meta property="twitter:title" content="Spanish Language Course in Saudi Arabia | Spanish Learning" />
+<meta property="twitter:description" content="Scitor Academy provides the best Spanish language training in Saudi Arabia. Speak confidently with native expert guidance. Learn online at Scitor Academy, Join!" />
  
 
 <!-- Meta Tags Generated with https://metatags.io -->
