--- a/digitalmarketing.html
+++ b/digitalmarketing.html
@@ -7,25 +7,25 @@
 
 <head>
   <!-- Primary Meta Tags -->
-  <title>Best Digital Marketing Institute | Scitor Academy</title>
-  <meta name="title" content="Best Digital Marketing Institute | Scitor Academy" />
+  <title>Digital Marketing Course in Saudi Arabia & Kuwait | Scitor</title>
+  <meta name="title" content="Digital Marketing Course in Saudi Arabia & Kuwait | Scitor" />
   <meta name="description"
-    content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+    content="Scitor Academy offers Best digital marketing course in Riyadh with expert guidance, flexible learning, and certification. Enroll now with Scitor Academy!" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
 
-  <meta property="og:title" content="Best Digital Marketing Institute | Scitor Academy" />
+  <meta property="og:title" content="Digital Marketing Course in Saudi Arabia & Kuwait | Scitor" />
   <meta property="og:description"
-    content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+    content="Scitor Academy offers Best digital marketing course in Riyadh with expert guidance, flexible learning, and certification. Enroll now with Scitor Academy!" />
 
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
 
-  <meta property="twitter:title" content="Best Digital Marketing Institute | Scitor Academy" />
+  <meta property="twitter:title" content="Digital Marketing Course in Saudi Arabia & Kuwait | Scitor" />
   <meta property="twitter:description"
-    content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+    content="Scitor Academy offers Best digital marketing course in Riyadh with expert guidance, flexible learning, and certification. Enroll now with Scitor Academy!" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
 
   <!-- Meta Tags Generated with https://metatags.io -->
