--- a/digitalmarketing.html
+++ b/digitalmarketing.html
@@ -55,7 +55,7 @@
     role="banner" data-no-scroll="1" data-duration="500" data-doc-height="1">
     <div class="container nav-container">
       <div class="nav-menu-container"><a href="index.html" class="brand-link w-nav-brand"><img src="../Assets/logo2.png"
-            loading="lazy" alt="Education Webflow Template - Cambridge - Created by Wedoflow.com and Azwedo.com"
+            loading="lazy" alt="Online Digital Marketing Course in Saudi Arabia"
             class="" style="width: 120px;" /></a>
         <nav role="navigation" class="nav-menu w-nav-menu">
           <div class="nav-link-holder"><a href="../index.html" class="link-block navbar-link w-inline-block">
@@ -99,7 +99,7 @@
          
         <div class="menu-button w-nav-button"><img
             src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f5cb8432add1526b6fabf4_menu-icon.svg"
-            loading="lazy" alt="Education Webflow Template - Cambridge - Created by Wedoflow.com and Azwedo.com"
+            loading="lazy" alt="Certified Digital Marketing Course in Riyadh"
             class="menu-icon" /></div>
       </div>
     </div>
@@ -117,7 +117,7 @@
         </div>
         <div id="w-node-_1f321115-1b62-2209-0f85-ca08606a72dd-6b6fabd2" class="content flex-right">
           <div class="fade-in-move-on-scroll">
-            <div class="product-image-holder"><img alt="" loading="lazy"
+            <div class="product-image-holder"><img alt="Best Digital Marketing Institute in Kuwait" loading="lazy"
                 data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr%22%2C%22to%22%3A%22src%22%7D%5D"
                 src="Assets/digital.jpeg.jpg"
                 class="product-image absolute-position" /></div>
@@ -257,7 +257,7 @@
                 <div class="xbutton rotate"><img
                     src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/6500215e2c50268eae2de8df_X Button.svg"
                     loading="lazy"
-                    alt="Education Webflow Template - Cambridge - Created by Wedoflow.com and Azwedo.com" /></div>
+                    alt="Digital Marketing Classes in Dubai" /></div>
               </div>
             </div>
           </div>
@@ -276,7 +276,7 @@
           <div class="fade-in-move-on-scroll">
             <div class="footer-brand-content">
               <a href="index.html" aria-current="page" class="footer-logo-link w--current">
-                <img src="../Assets/logo2.png" alt="شعار Scitor" class="footer-image" />
+                <img src="../Assets/logo2.png" alt="Advanced Digital Marketing Training in Qatar" class="footer-image" />
               </a>
               <div class="footer-description" data-en="Empowering minds with skills for the future. Learn. Grow. Succeed." data-ar="تمكين العقول بالمهارات للمستقبل. تعلم. نمُ. انجح.">
                 Empowering minds with skills for the future. Learn. Grow. Succeed.
