--- a/aimasterclass.html
+++ b/aimasterclass.html
@@ -7,25 +7,25 @@
 
 <head>
   <!-- Primary Meta Tags -->
-  <title>Best Graphic Design Course in Saudi Arabia & Kuwait | Scitor</title>
+  <title>Top AI Masterclass in Saudi Arabia & Kuwait | Scitor Academy</title>
   <meta name="title" content="Best Graphic Design Course in Saudi Arabia & Kuwait | Scitor" />
   <meta name="description"
-    content="Join Scitor Academy’s best graphic design course in Riyadh. Learn practical skills online and earn certification and design your success today. Contact us now" />
+    content="Master AI with Scitor Academy’s Top AI Master Class in Saudi Arabia. Learn AI tools, trends, and earn certification online. Start your AI journey today with us!" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
 
-  <meta property="og:title" content="Best Graphic Design Course in Saudi Arabia & Kuwait | Scitor" />
+  <meta property="og:title" content="Top AI Masterclass in Saudi Arabia & Kuwait | Scitor Academy" />
   <meta property="og:description"
-    content="Join Scitor Academy’s best graphic design course in Riyadh. Learn practical skills online and earn certification and design your success today. Contact us now" />
+    content="Master AI with Scitor Academy’s Top AI Master Class in Saudi Arabia. Learn AI tools, trends, and earn certification online. Start your AI journey today with us!" />
 
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
 
-  <meta property="twitter:title" content="Best Graphic Design Course in Saudi Arabia & Kuwait | Scitor" />
+  <meta property="twitter:title" content="Top AI Masterclass in Saudi Arabia & Kuwait | Scitor Academy" />
   <meta property="twitter:description"
-    content="Join Scitor Academy’s best graphic design course in Riyadh. Learn practical skills online and earn certification and design your success today. Contact us now" />
+    content="Master AI with Scitor Academy’s Top AI Master Class in Saudi Arabia. Learn AI tools, trends, and earn certification online. Start your AI journey today with us!" />
 
 
   <!-- Meta Tags Generated with https://metatags.io -->
@@ -55,7 +55,7 @@
     role="banner" data-no-scroll="1" data-duration="500" data-doc-height="1">
     <div class="container nav-container">
       <div class="nav-menu-container"><a href="index.html" class="brand-link w-nav-brand"><img src="../Assets/logo2.png"
-            loading="lazy" alt="Graphic Design Certification Course in Saudi Arabia"
+            loading="lazy" alt="AI and Machine Learning Course in Saudi Arabia"
             class="" style="width: 120px;" /></a>
         <nav role="navigation" class="nav-menu w-nav-menu">
           <div class="nav-link-holder"><a href="../index.html" class="link-block navbar-link w-inline-block">
