--- a/graphicdesigning.html
+++ b/graphicdesigning.html
@@ -7,25 +7,25 @@
 
 <head>
   <!-- Primary Meta Tags -->
-  <title>Best Digital Marketing Institute | Scitor Academy</title>
-  <meta name="title" content="Best Digital Marketing Institute | Scitor Academy" />
+  <title>Best Graphic Design Course in Saudi Arabia & Kuwait | Scitor</title>
+  <meta name="title" content="Best Graphic Design Course in Saudi Arabia & Kuwait | Scitor"/>
   <meta name="description"
-    content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+    content="Join Scitor Academy’s best graphic design course in Riyadh. Learn practical skills online and earn certification and design your success today. Contact us now" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
 
-  <meta property="og:title" content="Best Digital Marketing Institute | Scitor Academy" />
+  <meta property="og:title" content="Best Graphic Design Course in Saudi Arabia & Kuwait | Scitor" />
   <meta property="og:description"
-    content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+    content="Join Scitor Academy’s best graphic design course in Riyadh. Learn practical skills online and earn certification and design your success today. Contact us now" />
 
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
 
-  <meta property="twitter:title" content="Best Digital Marketing Institute | Scitor Academy" />
+  <meta property="twitter:title" content="Best Graphic Design Course in Saudi Arabia & Kuwait | Scitor" />
   <meta property="twitter:description"
-    content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+    content="Join Scitor Academy’s best graphic design course in Riyadh. Learn practical skills online and earn certification and design your success today. Contact us now" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
 
   <!-- Meta Tags Generated with https://metatags.io -->
@@ -55,7 +55,7 @@
     role="banner" data-no-scroll="1" data-duration="500" data-doc-height="1">
     <div class="container nav-container">
       <div class="nav-menu-container"><a href="index.html" class="brand-link w-nav-brand"><img src="../Assets/logo2.png"
-            loading="lazy" alt="Education Webflow Template - Cambridge - Created by Wedoflow.com and Azwedo.com"
+            loading="lazy" alt="Graphic Design Certification Course in Saudi Arabia"
             class="" style="width: 120px;" /></a>
         <nav role="navigation" class="nav-menu w-nav-menu">
           <div class="nav-link-holder"><a href="../index.html" class="link-block navbar-link w-inline-block">
@@ -98,7 +98,7 @@
         </div>
         <div class="menu-button w-nav-button"><img
             src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f5cb8432add1526b6fabf4_menu-icon.svg"
-            loading="lazy" alt="Education Webflow Template - Cambridge - Created by Wedoflow.com and Azwedo.com"
+            loading="lazy" alt="Graphic Design Certification Course in Dubai"
             class="menu-icon" /></div>
       </div>
     </div>
@@ -116,7 +116,7 @@
         </div>
         <div id="w-node-_1f321115-1b62-2209-0f85-ca08606a72dd-6b6fabd2" class="content flex-right">
           <div class="fade-in-move-on-scroll">
-            <div class="product-image-holder"><img alt="" loading="lazy"
+            <div class="product-image-holder"><img alt="Online Graphic Designing Course in Oman" loading="lazy"
                 data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr%22%2C%22to%22%3A%22src%22%7D%5D"
                 src="Assets/graphic desiging.jpeg.jpg"
                 class="product-image absolute-position" /></div>
@@ -203,7 +203,7 @@
                 <div class="xbutton rotate"><img
                     src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/6500215e2c50268eae2de8df_X Button.svg"
                     loading="lazy"
-                    alt="Education Webflow Template - Cambridge - Created by Wedoflow.com and Azwedo.com" /></div>
+                    alt="Best Graphic Design Classes in Kuwait" /></div>
               </div>
             </div>
           </div>
@@ -222,7 +222,7 @@
           <div class="fade-in-move-on-scroll">
             <div class="footer-brand-content">
               <a href="index.html" aria-current="page" class="footer-logo-link w--current">
-                <img src="../Assets/logo2.png" alt="شعار Scitor" class="footer-image" />
+                <img src="../Assets/logo2.png" alt="Learn Graphic Design in Saudi Arabia Online" class="footer-image" />
               </a>
               <div class="footer-description" data-en="Empowering minds with skills for the future. Learn. Grow. Succeed." data-ar="تمكين العقول بالمهارات للمستقبل. تعلم. نمُ. انجح.">
                 Empowering minds with skills for the future. Learn. Grow. Succeed.
