--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
     </div>
     
     <div role="listitem" class="product-collection-item w-dyn-item">
-      <a href="futureofproductivity.html" class="product-item-link w-inline-block">
+      <a href="learnspanishonline.html" class="product-item-link w-inline-block">
           <div class="facts-card-container w-condition-invisible">
               <div class="full-card-holder">
                   <div class="font-card">
@@ -1147,7 +1147,7 @@
               <div data-en="Digital Marketing" data-ar="التسويق الرقمي">Digital Marketing</div>
               <div class="link-block-underline"></div>
             </a></div>
-          <div class="fade-in-move-on-scroll"><a href="./FutureofProductivity.html" class="footer-link w-inline-block">
+          <div class="fade-in-move-on-scroll"><a href="./learnspanishonline.html" class="footer-link w-inline-block">
               <div  data-en="Productivity" data-ar="الإنتاجية">Productivity</div>
               <div class="link-block-underline"></div>
             </a></div>
