--- a/courses.html
+++ b/courses.html
@@ -46,6 +46,7 @@
   <script
     type="text/javascript">window.__WEBFLOW_CURRENCY_SETTINGS = { "currencyCode": "USD", "symbol": "$", "decimal": ".", "fractionDigits": 2, "group": ",", "template": "{{wf {\"path\":\"symbol\",\"type\":\"PlainText\"} }} {{wf {\"path\":\"amount\",\"type\":\"CommercePrice\"} }} {{wf {\"path\":\"currencyCode\",\"type\":\"PlainText\"} }}", "hideDecimalForWholeNumbers": false };</script>
 <link rel="canonical" href="https://www.scitoracademy.com/courses.html"/>
+<meta name="robots" content="index, follow">
 </head>
 
 <body>
