--- a/index.html
+++ b/index.html
@@ -45,6 +45,53 @@
     type="text/javascript">window.__WEBFLOW_CURRENCY_SETTINGS = { "currencyCode": "USD", "symbol": "$", "decimal": ".", "fractionDigits": 2, "group": ",", "template": "{{wf {\"path\":\"symbol\",\"type\":\"PlainText\"} }} {{wf {\"path\":\"amount\",\"type\":\"CommercePrice\"} }} {{wf {\"path\":\"currencyCode\",\"type\":\"PlainText\"} }}", "hideDecimalForWholeNumbers": false };</script>
 <link rel="canonical" href="https://www.scitoracademy.com/"/>
 <meta name="robots" content="index, follow">
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org/", 
+  "@type": "BreadcrumbList", 
+  "itemListElement": [{
+    "@type": "ListItem", 
+    "position": 1, 
+    "name": "Digital Marketing Institute in Saudi Arabia & Kuwait | Scitor",
+    "item": "https://www.scitoracademy.com/"  
+  },{
+    "@type": "ListItem", 
+    "position": 2, 
+    "name": "Top AI Certification Course in Saudi Arabia | AI Masterclass",
+    "item": "https://www.scitoracademy.com/courses.html"  
+  },{
+    "@type": "ListItem", 
+    "position": 3, 
+    "name": "Top Graphic Design Training in Saudi Arabia & Kuwait | Scitor",
+    "item": "https://www.scitoracademy.com/about.html"  
+  },{
+    "@type": "ListItem", 
+    "position": 4, 
+    "name": "Spanish Language Course in Saudi Arabia | Spanish Learning",
+    "item": "https://www.scitoracademy.com/contact.html"  
+  },{
+    "@type": "ListItem", 
+    "position": 5, 
+    "name": "Digital Marketing Course in Saudi Arabia & Kuwait | Scitor",
+    "item": "https://www.scitoracademy.com/digitalmarketing.html"  
+  },{
+    "@type": "ListItem", 
+    "position": 6, 
+    "name": "Best Graphic Design Course in Saudi Arabia & Kuwait | Scitor",
+    "item": "https://www.scitoracademy.com/graphicdesigning.html"  
+  },{
+    "@type": "ListItem", 
+    "position": 7, 
+    "name": "Spanish Language Learning in Saudi Arabia & Kuwait | Scitor",
+    "item": "https://www.scitoracademy.com/learnspanishonline.html"  
+  },{
+    "@type": "ListItem", 
+    "position": 8, 
+    "name": "Top AI Masterclass in Saudi Arabia & Kuwait | Scitor Academy",
+    "item": "https://www.scitoracademy.com/aimasterclass.html"  
+  }]
+}
+</script>
 </head>
 
 <body>
