--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
  
 <html data-wf-domain="az-cambridge.webflow.io" data-wf-page="64f5cb8432add1526b6fabd7" data-wf-site="64f5cb8332add1526b6fab02" lang="en" dir="ltr">
 <head>
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-84T3HJLWQE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-84T3HJLWQE');
+</script>
     <!-- Primary Meta Tags -->
 <title>Digital Marketing Institute in Saudi Arabia & Kuwait | Scitor</title>
 <meta name="title" content="Digital Marketing Institute in Saudi Arabia & Kuwait | Scitor" />
