--- a/about.html
+++ b/about.html
@@ -5,6 +5,15 @@
 <!-- Mirrored from az-cambridge.webflow.io/about by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Dec 2024 09:06:30 GMT -->
 
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-84T3HJLWQE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-84T3HJLWQE');
+</script>
   <title>Top Graphic Design Training in Saudi Arabia & Kuwait | Scitor</title>
 <meta name="title" content="Top Graphic Design Training in Saudi Arabia & Kuwait | Scitor" />
 <meta name="description" content="Learn graphic design online in Saudi Arabia with Scitor Academy, the best place to study graphic design. Flexible online sessions and certification. Contact Us!" />
