--- a/courses.html
+++ b/courses.html
@@ -5,6 +5,15 @@
 <!-- Mirrored from az-cambridge.webflow.io/courses by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Dec 2024 09:06:30 GMT -->
 
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-84T3HJLWQE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-84T3HJLWQE');
+</script>
   <title>Top AI Certification Course in Saudi Arabia | AI Masterclass</title>
   <meta name="title" content="Top AI Certification Course in Saudi Arabia | AI Masterclass" />
   <meta name="description"
