--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,15 @@
   data-wf-site="64f5cb8332add1526b6fab02">
 <!-- Mirrored from az-cambridge.webflow.io/contact by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Dec 2024 09:06:35 GMT -->
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-84T3HJLWQE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-84T3HJLWQE');
+</script>
   <!-- Primary Meta Tags -->
 <title>Spanish Language Course in Saudi Arabia | Spanish Learning</title>
 <meta name="title" content="Spanish Language Course in Saudi Arabia | Spanish Learning" />
