--- a/blog.html
+++ b/blog.html
@@ -5,22 +5,25 @@
 <!-- Mirrored from az-cambridge.webflow.io/blog by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Dec 2024 09:06:32 GMT -->
 
 <head>
-  <title>  Scitor Academy</title>
-<meta name="title" content="Best Digital Marketing Institute | Scitor Academy" />
-<meta name="description" content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+  <title> Scitor Academy</title>
+  <meta name="title" content="Best Digital Marketing Institute | Scitor Academy" />
+  <meta name="description"
+    content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
 
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website" />
- 
-<meta property="og:title" content="Best Digital Marketing Institute | Scitor Academy" />
-<meta property="og:description" content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
- 
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
 
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:title" content="Best Digital Marketing Institute | Scitor Academy" />
-<meta property="twitter:description" content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
-<meta content="width=device-width, initial-scale=1" name="viewport" />
+  <meta property="og:title" content="Best Digital Marketing Institute | Scitor Academy" />
+  <meta property="og:description"
+    content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:title" content="Best Digital Marketing Institute | Scitor Academy" />
+  <meta property="twitter:description"
+    content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link href="../assets-global.website-files.com/64f5cb8332add1526b6fab02/css/az-cambridge.webflow.3d8ed26ef.css"
     rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/" rel="preconnect" />
@@ -30,15 +33,84 @@
     type="text/javascript">WebFont.load({ google: { families: ["Bricolage Grotesque:200,300,regular,500,600,700,800", "Roboto:regular", "Roboto:500", "Roboto:regular,700", "DM Sans:regular,500,600"] } });</script>
   <script
     type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-  <link
-    href="../Assets/logo1.png"
-    rel="shortcut icon" type="image/x-icon" />
+  <link href="../Assets/logo1.png" rel="shortcut icon" type="image/x-icon" />
   <link href="../cdn.prod.website-files.com/64f5cb8332add1526b6fab02/65045b96cd260a1fc1ee5596_Cambridge%20Webclip.png"
     rel="apple-touch-icon" />
   <style>
     * {
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
+    }
+
+    .blog-feature-section {
+      padding-bottom: 150px;
+    }
+
+    .blog-feature-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr) !important;
+      /* Default: 3 columns */
+      gap: 20px;
+    }
+
+    .blog-card {
+      border: 1px solid #ddd;
+      border-radius: 15px;
+      overflow: hidden;
+      text-align: center;
+      background: #fff;
+      cursor: pointer;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      padding: 15px;
+      height: 230px;
+    }
+
+    .blog-card:hover {
+      transform: scale(1.05);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    }
+
+    .blog-card-image {
+      width: 100%;
+      height: 150px;
+      object-fit: cover;
+      border-bottom: 1px solid #ddd;
+      border-radius: 15px;
+    }
+
+    .blog-card-title {
+      font-size: 18px;
+      margin: 10px 0;
+      color: #333;
+      font-weight: bold;
+      text-transform: capitalize;
+    }
+
+    /* Responsive Design */
+    @media (max-width: 1200px) {
+      .blog-feature-grid {
+        grid-template-columns: repeat(2, 1fr) !important;
+        /* 2 columns on medium screens */
+      }
+    }
+
+    @media (max-width: 768px) {
+      .blog-feature-grid {
+        grid-template-columns: 1fr !important;
+        /* 1 column on smaller screens */
+      }
+
+      .blog-card-title {
+        font-size: 16px !important;
+        /* Adjust title size for smaller screens */
+      }
+    }
+
+    @media (max-width: 480px) {
+      .blog-card-title {
+        font-size: 14px !important;
+        /* Smaller font size for mobile screens */
+      }
     }
   </style>
   <script
@@ -67,26 +139,26 @@
               <div class="nav-text">About</div>
               <div class="nav-text">About</div>
             </a></div>
-          
+
           <div class="nav-link-holder"><a href="contact.html" data-w-id="3f8e13ac-9db9-7578-0440-e05c0873b212"
               class="link-block navbar-link w-inline-block">
               <div class="nav-text">Contact</div>
               <div class="nav-text">Contact</div>
             </a></div>
-            <div class="nav-link-holder">
-              <a href="contact.html" class="button white-button nav-button w-button">let&#x27;s talk</a>
-            </div>
-            <div class="language-switch">
-              <input type="checkbox" id="language-toggle">
-              <label for="language-toggle" class="switch">
-                <span class="slider"></span>
-                <span class="label-en">EN</span>
-                <span class="label-ar">AR</span>
-              </label>
-            </div>
+          <div class="nav-link-holder">
+            <a href="contact.html" class="button white-button nav-button w-button">let&#x27;s talk</a>
+          </div>
+          <div class="language-switch">
+            <input type="checkbox" id="language-toggle">
+            <label for="language-toggle" class="switch">
+              <span class="slider"></span>
+              <span class="label-en">EN</span>
+              <span class="label-ar">AR</span>
+            </label>
+          </div>
         </nav>
         <div class="nav-menu-overlay-mobile"></div>
-         
+
         <div class="menu-button w-nav-button"><img
             src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f5cb8432add1526b6fabf4_menu-icon.svg"
             loading="lazy" alt="Education Webflow Template - Cambridge - Created by Wedoflow.com and Azwedo.com"
@@ -121,6 +193,25 @@
         class="third-hero-circle"></div>
     </div>
   </div>
+
+  <section class="blog-feature-section">
+    <div class="container w-layout-blockcontainer w-container">
+      <div class="blog-feature-area">
+        <div class="w-dyn-list" id="blog-list">
+          <div role="list" class="w-dyn-items">
+            <div role="listitem" class="w-dyn-item">
+              <div class="blog-feature-wrap">
+                <div id="blog-feature-grid" class="w-layout-grid blog-feature-grid">
+                  <!-- Blog cards will be dynamically injected here -->
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <div class="section blog-section">
     <div class="container blog-container">
       <div data-w-id="aee8d85d-271c-d921-da49-70722472bd0b"
@@ -312,7 +403,7 @@
     </div>
     <div class="light-creme-bg-color insights"></div>
   </div>
-  
+
   <div data-w-id="eb050d0c-cd20-6fbc-5d31-0eaf0a144c54" class="footer">
     <div class="circle"></div>
     <div class="white-div"></div>
@@ -324,7 +415,9 @@
               <a href="index.html" aria-current="page" class="footer-logo-link w--current">
                 <img src="../Assets/logo2.png" alt="شعار Scitor" class="footer-image" />
               </a>
-              <div class="footer-description" data-en="Empowering minds with skills for the future. Learn. Grow. Succeed." data-ar="تمكين العقول بالمهارات للمستقبل. تعلم. نمُ. انجح.">
+              <div class="footer-description"
+                data-en="Empowering minds with skills for the future. Learn. Grow. Succeed."
+                data-ar="تمكين العقول بالمهارات للمستقبل. تعلم. نمُ. انجح.">
                 Empowering minds with skills for the future. Learn. Grow. Succeed.
               </div>
             </div>
@@ -363,24 +456,27 @@
         <div class="footer-grid-content">
           <div class="primary-font" data-en="Programs" data-ar="البرامج">Programs</div>
           <div class="fade-in-move-on-scroll"><a href="ToolsforBusinessOwners.html" class="footer-link w-inline-block">
-              <div  data-ar="الأعمال بالذكاء الاصطناعي" data-en="Business with AI" >Business with AI</div>
+              <div data-ar="الأعمال بالذكاء الاصطناعي" data-en="Business with AI">Business with AI</div>
               <div class="link-block-underline"></div>
             </a></div>
-          <div class="fade-in-move-on-scroll"><a href="GraphicDesigningandVideoEditing.html" class="footer-link w-inline-block">
+          <div class="fade-in-move-on-scroll"><a href="GraphicDesigningandVideoEditing.html"
+              class="footer-link w-inline-block">
               <div data-en="Graphic Design" data-ar="التصميم الجرافيكي">Graphic Design</div>
               <div class="link-block-underline"></div>
             </a></div>
-          <div class="fade-in-move-on-scroll"><a href="GraphicDesigningandVideoEditing.html" class="footer-link w-inline-block">
+          <div class="fade-in-move-on-scroll"><a href="GraphicDesigningandVideoEditing.html"
+              class="footer-link w-inline-block">
               <div data-en="Digital Marketing" data-ar="التسويق الرقمي">Digital Marketing</div>
               <div class="link-block-underline"></div>
             </a></div>
           <div class="fade-in-move-on-scroll"><a href="./FutureofProductivity.html" class="footer-link w-inline-block">
-              <div  data-en="Productivity" data-ar="الإنتاجية">Productivity</div>
+              <div data-en="Productivity" data-ar="الإنتاجية">Productivity</div>
               <div class="link-block-underline"></div>
             </a></div>
         </div>
-        <div class="footer-grid-content" >
-          <div class="primary-font" data-en="Follow us" data-ar="تابعنا" style="display: flex; justify-content: center; align-items: center; width: full;">Follow us</div>
+        <div class="footer-grid-content">
+          <div class="primary-font" data-en="Follow us" data-ar="تابعنا"
+            style="display: flex; justify-content: center; align-items: center; width: full;">Follow us</div>
           <div class="social-media-icons">
             <!-- <a href="https://www.youtube.com/@wedoflow" target="_blank" class="social-media-link w-inline-block">
               <img src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f86bddff596d3f91eac632_Facebook.svg" loading="lazy" class="social-media-icon" />
@@ -394,15 +490,21 @@
               <img src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f86c16ff596d3f91eb09f7_Linkedin.svg" loading="lazy" class="social-media-icon" />
               <img src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f86c98404fdcc077d425d7_Linkedin 1.svg" loading="lazy" class="colored-icon" />
             </a> -->
-            <a href="https://www.instagram.com/scitor.academy?igsh=ejkxbzBjdzd1eHls" target="_blank" class="social-media-link w-inline-block">
-              <img src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f86c21a43f4e9f5a38743c_Instagram.svg" loading="lazy" class="social-media-icon" />
-              <img src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f86c476cf0c2e54d97e048_Instagram 1.svg" loading="lazy" class="colored-icon" />
+            <a href="https://www.instagram.com/scitor.academy?igsh=ejkxbzBjdzd1eHls" target="_blank"
+              class="social-media-link w-inline-block">
+              <img
+                src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f86c21a43f4e9f5a38743c_Instagram.svg"
+                loading="lazy" class="social-media-icon" />
+              <img
+                src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f86c476cf0c2e54d97e048_Instagram 1.svg"
+                loading="lazy" class="colored-icon" />
             </a>
           </div>
         </div>
       </div>
     </div>
   </div>
+  <script src="blog.js"></script>
   <script src="languagetoggle.js"></script>
   <script src="../d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c88568.js?site=64f5cb8332add1526b6fab02"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
