--- a/AddBlog.html
+++ b/AddBlog.html
@@ -137,7 +137,7 @@
           <input type="text" id="meta-title" name="metaTitle" required />
 
           <label for="canonical">Canonical link</label>
-          <input type="text" id="canonicallink" name="canonical" required />
+          <input type="text" id="canonicallink" name="canonical"/>
 
           <label for="meta-description">Meta description</label>
           <textarea
