--- a/AddBlog.html
+++ b/AddBlog.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scitor</title>
+    <link
+    href="../Assets/logo1.png"
+    rel="shortcut icon" type="image/x-icon" />
     <style>
       * {
         margin: 0;
@@ -137,8 +140,7 @@
           <input type="text" id="meta-title" name="metaTitle" required />
 
           <label for="canonical">Canonical link</label>
-          <input type="text" id="canonicallink" name="canonical" />
-
+          <input type="text" id="canonicallink" name="canonical" required />
           <label for="meta-description">Meta description</label>
           <textarea
             id="meta-description"
