--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
     type="text/javascript">WebFont.load({ google: { families: ["Bricolage Grotesque:200,300,regular,500,600,700,800", "Roboto:regular", "Roboto:500", "Roboto:regular,700", "DM Sans:regular,500,600"] } });</script>
   <script
     type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-  <link
-    href="../Assets/logo1.png"
-    rel="shortcut icon" type="image/x-icon" />
+    <link rel="icon" href="https://www.scitoracademy.com/Assets/logo1.png" type="image/png">
+
  
   <style>
     * {
@@ -100,6 +99,21 @@
   }]
 }
 </script>
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "url": "https://www.scitoracademy.com",
+    "logo": "https://www.scitoracademy.com/Assets/logo1.png",
+    "name": "Scitor Academy",
+    "sameAs": [
+      "https://www.facebook.com/YourPage",
+      "https://www.linkedin.com/in/YourPage",
+      "https://twitter.com/YourPage"
+    ]
+  }
+  </script>
+  
 </head>
 
 <body>
