--- a/courses.html
+++ b/courses.html
@@ -472,9 +472,9 @@
                         </div>
                         <div class="product-item-details">
                             <div class="product-item-name" 
-                                 data-en="Master the Future of Productivity" 
+                                 data-en="Learn Spanish Online" 
                                  data-ar="إتقان مستقبل الإنتاجية">
-                                Master the Future of Productivity
+                                Learn Spanish Online
                             </div>
                             <div class="month-holder">
                                 <div class="months" 
@@ -570,9 +570,9 @@
                                 <div><span class="black-star">★ </span></div>
                             </div>
                             <div class="product-item-name" 
-                                 data-en="Master the Future of Productivity" 
+                                 data-en="Learn Spanish Online" 
                                  data-ar="إتقان مستقبل الإنتاجية">
-                                Master the Future of Productivity
+                                Learn Spanish Online
                             </div>
                         </div>
                     </div>
