--- a/blog-detail.html
+++ b/blog-detail.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/" rel="preconnect" />
     <link href="https://fonts.gstatic.com/" rel="preconnect" crossorigin="anonymous" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    
     <script src="../ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
     <script
         type="text/javascript">WebFont.load({ google: { families: ["Bricolage Grotesque:200,300,regular,500,600,700,800", "Roboto:regular", "Roboto:500", "Roboto:regular,700", "DM Sans:regular,500,600"] } });</script>
@@ -90,7 +90,7 @@
         <div class="container nav-container">
             <div class="nav-menu-container"><a href="index.html" aria-current="page"
                     class="brand-link w-nav-brand w--current"><img src="../Assets/logo2.png" loading="lazy" alt=""
-                        class="w-[120px]" /></a>
+                        class="w-[120px]" style="max-width: 20%;" /></a>
                 <nav role="navigation" class="nav-menu w-nav-menu">
                     <div class="nav-link-holder"><a href="index.html" aria-current="page"
                             class="link-block navbar-link w-inline-block w--current">
